@@ -1,4 +1,4 @@
-# PH_B004 - Monitor.Wait is Enclosed By Parameter-Dependent While-Loop
+# PH_B004 - Single Pulse for Variable Wait Conditions
 
 ## Problem
 
